[package]
name = "mlc"
version = "0.16.3"
authors = ["Armin Becher <becherarmin@gmail.com>"]
edition = "2018"
description = "The markup link checker (mlc) checks for broken links in markup files."
keywords = [ "link-checker", "broken", "markup", "html", "markdown"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/becheran/mlc"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "becheran/mlc" }
is-it-maintained-issue-resolution = { repository = "becheran/mlc" }

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
log = "0.4.21"
simplelog = "0.12.2"
walkdir = "2.5.0"
regex = "1.10.4"
lazy_static = "1.4.0"
url = "2.5.0"
colored = "2.1.0"
async-std = "1.12.0"
reqwest = {version="0.12.4", features = ["native-tls-vendored", "brotli", "gzip", "deflate"] }
tokio = {version="1.37.0", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.30"
wildmatch = "2.3.3"
pulldown-cmark = "0.9.6"
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }
url-escape = "0.1.1"

[dev-dependencies]
ntest = "0.9.2"
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
