[package]
name = "mlc"
version = "0.21.0"
authors = ["Armin Becher <becherarmin@gmail.com>"]
edition = "2018"
description = "The markup link checker (mlc) checks for broken links in markup files."
keywords = [ "link-checker", "broken", "markup", "html", "markdown"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/becheran/mlc"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "becheran/mlc" }
is-it-maintained-issue-resolution = { repository = "becheran/mlc" }

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
log = "0.4.27"
fern = "0.7.1"
walkdir = "2.5.0"
regex = "1.11.1"
lazy_static = "1.5.0"
url = "2.5.4"
colored = "3.0.0"
async-std = "1.13.1"
reqwest = {version="0.12.15", features = ["native-tls-vendored", "brotli", "gzip", "deflate"] }
tokio = {version="1.44.2", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3.31"
wildmatch = "2.4.0"
pulldown-cmark = "0.13.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
url-escape = "0.1.1"

[dev-dependencies]
ntest = "0.9.3"
criterion = "0.5.1"
mockito = "1.7.0"

[[bench]]
name = "benchmarks"
harness = false
